fix typos and whitespace in metadata
Several metadata translations end in superfluous horizontal tab
characters (encoded as u0009). That leads to mouse hovers showing
additional "free space" after the text. Remove all those whitespace line
endings and also fix all typos found during the cleanup.

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/annotation/checkstyle-metadata.properties
@@ -7,7 +7,7 @@ AnnotationUseStyle.elementStyle       = Defines the annotation element styles.
 AnnotationUseStyle.name               = Annotation Use Style
 AnnotationUseStyle.trailingArrayComma = Defines the policy for trailing comma in arrays.
 
-MissingDeprecated.desc = Verifies that both the <code>java.lang.Deprecated</code> annotation is present and the <code>@deprecated<code> Javadoc tag is present when either is present.
+MissingDeprecated.desc = Verifies that both the <code>java.lang.Deprecated</code> annotation is present and the <code>@deprecated</code> Javadoc tag is present when either is present.
 MissingDeprecated.name = Missing Deprecated
 MissingDeprecated.skipNoJavadoc = When this property is set to true check ignore cases when JavaDoc is missing, but still warns when JavaDoc is present but either @deprecated is missing from JavaDoc or @deprecated is missing from the element.
 
@@ -18,7 +18,7 @@ MissingOverride.name                  = Missing Override
 PackageAnnotation.desc = \ This check makes sure that all package annotations are in the package-info.java file.<br/>\r\n<br/>\r\nAccording to the Java JLS 3rd ed.<br/>\r\n<br>\r\nThe JLS does not enforce the placement of package annotations. This placement may vary based on implementation. The JLS does highly recommend that all package annotations are placed in the package-info.java file. See <a target="_blank" href="http://java.sun.com/docs/books/jls/third_edition/html/j3TOC.html">Java Language specification, sections 7.4.1.1</a>.
 PackageAnnotation.name = Package Annotation
 
-SuppressWarnings.desc   = This check allows you to specify what warnings that SuppressWarnings is not allowed to suppress. You can also specify a list of TokenTypes that the configured warning(s) cannot be suppressed on.<br/>\r\n<br/>\r\nLimitations: This check does not consider conditionals inside the SuppressWarnings annotation.<br/>\r\nFor example: <code>@SupressWarnings((false) ? (true) ? "unchecked" : "foo" : "unused")</code>\r\n<br/>\r\nAccording to the above example, the "unused" warning is being suppressed not the "unchecked" or "foo" warnings. All of these warnings will be considered and matched against regardless of what the conditional evaluates to.
+SuppressWarnings.desc   = This check allows you to specify what warnings that SuppressWarnings is not allowed to suppress. You can also specify a list of TokenTypes that the configured warning(s) cannot be suppressed on.<br/>\r\n<br/>\r\nLimitations: This check does not consider conditionals inside the SuppressWarnings annotation.<br/>\r\nFor example: <code>@SuppressWarnings((false) ? (true) ? "unchecked" : "foo" : "unused")</code>\r\n<br/>\r\nAccording to the above example, the "unused" warning is being suppressed not the "unchecked" or "foo" warnings. All of these warnings will be considered and matched against regardless of what the conditional evaluates to.
 SuppressWarnings.format = The warnings property is a regex pattern. Any warning being suppressed matching this pattern will be flagged.
 SuppressWarnings.name   = Suppress Warnings
 SuppressWarnings.tokens = tokens to check
