--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -26,7 +26,7 @@ EqualsAvoidNull.desc = Checks that any combination of String literals with optio
 EqualsAvoidNull.name = Equals Avoid Null
 EqualsAvoidNull.ignoreEqualsIgnoreCase = Whether to ignore String.equalsIgnoreCase() invocations
 
-EqualsHashCode.desc = Checks that classes that override <code>equals()</code>  also override <code>hashCode()</code>.<br/>\r\nRationale: The contract of <code>equals()</code> and <code>hashCode()</code> requires that equal objects have the same hashCode. Hence, whenever you override <code>equals()</code> you must override <code>hashCode()</code> to ensure that your class can be used in collections that are hash based.
+EqualsHashCode.desc = Checks that classes that override <code>equals()</code> also override <code>hashCode()</code>.<br/>\r\nRationale: The contract of <code>equals()</code> and <code>hashCode()</code> requires that equal objects have the same hashCode. Hence, whenever you override <code>equals()</code> you must override <code>hashCode()</code> to ensure that your class can be used in collections that are hash based.
 EqualsHashCode.name = Equals and HashCode
 
 ExplicitInitialization.desc = Checks if any class or object member explicitly initialized to default for its type value (<code>null</code> for object references, zero for numeric types and <code>char</code> and <code>false</code> for <code>boolean</code>.<br/>\r\nRationale: each instance variable gets initialized twice, to the same value. Java initializes each instance variable to its default value (0 or null) before performing any initialization specified in the code. So in this case, x gets initialized to 0 twice, and bar gets initialized to null twice. So there is a minor inefficiency. This style of coding is a hold-over from C/C++ style coding, and it shows that the developer isn't really confident that Java really initializes instance variables to default values.
@@ -34,7 +34,7 @@ ExplicitInitialization.name = Explicit Initialization
 ExplicitInitialization.onlyObjectReferences = whether only explicit initializations made to null for objects should be checked
 
 FallThrough.checkLastCaseGroup = Whether we need to check last case group or not.
-FallThrough.desc               = Checks for fall through in switch  statements Finds locations where a <code>case</code> contains Java code - but lacks a <code>break, return, throw</code> or <code>continue</code> statement.<br/>\r\nThe check honors special comments to supress the warning. By default the text "fallthru", "fall through", "fallthrough", "falls through" and "fallsthrough" are recognized (case sensitive). The comment containing this words must be a one-liner and must be on the last none-empty line before the <code>case</code> triggering the warning or on the same line before the <code>case</code> (urgly, but possible).\r\n<pre>\r\nswitch (i){\r\ncase 0:\r\n    i++; // fall through\r\n\r\ncase 1:\r\n    i++;\r\n    // falls through\r\ncase 2: {\r\n    i++;\r\n}\r\n// fallthrough\r\ncase 3:\r\n    i++;\r\n/* fallthru */case 4:\r\n    i++\r\n    break;\r\n}\r\n</pre>\u0009\r\nNote: the check works in assumption that there is no unreachable code in the <code>case</code>.
+FallThrough.desc               = Checks for fall through in switch  statements. Finds locations where a <code>case</code> contains Java code - but lacks a <code>break, return, throw</code> or <code>continue</code> statement.<br/>\r\nThe check honors special comments to suppress the warning. By default the text "fallthru", "fall through", "fallthrough", "falls through" and "fallsthrough" are recognized (case sensitive). The comment containing this words must be a one-liner and must be on the last none-empty line before the <code>case</code> triggering the warning or on the same line before the <code>case</code> (urgly, but possible).\r\n<pre>\r\nswitch (i){\r\ncase 0:\r\n    i++; // fall through\r\n\r\ncase 1:\r\n    i++;\r\n    // falls through\r\ncase 2: {\r\n    i++;\r\n}\r\n// fallthrough\r\ncase 3:\r\n    i++;\r\n/* fallthru */case 4:\r\n    i++\r\n    break;\r\n}\r\n</pre>\u0009\r\nNote: the check works in assumption that there is no unreachable code in the <code>case</code>.
 FallThrough.name               = Fall Through
 FallThrough.reliefPattern      = Regular expression to match the relief comment that suppresses the warning about a fall through.
 
@@ -163,7 +163,7 @@ SimplifyBooleanExpression.name = Simplify Boolean Expression
 SimplifyBooleanReturn.desc = Checks for overly complicated boolean return statements. For example the following code\r\n<pre>\r\nif (valid())\r\n    return false;\r\nelse\r\n    return true;\r\n</pre>\r\ncould be written as\r\n<pre>\r\nreturn !valid();\r\n</pre>\r\nThe Idea for this Check has been shamelessly stolen from the equivalent <a href="http://pmd.sourceforge.net/" target="_blank">PMD</a> rule.
 SimplifyBooleanReturn.name = Simplify Boolean Return
 
-StringLiteralEquality.desc = Checks that string literals are not used with == or !=.<br/>\r\nRationale: Novice Java programmers often use code like:\r\n<pre>\r\nif (x == "something")\r\n</pre>\r\nwhen they mean\r\n<pre>\r\nif ("something".equals(x))\r\n</pre>\r\n\u0009\r\n\u0009\u0009
+StringLiteralEquality.desc = Checks that string literals are not used with == or !=.<br/>\r\nRationale: Novice Java programmers often use code like:\r\n<pre>\r\nif (x == "something")\r\n</pre>\r\nwhen they mean\r\n<pre>\r\nif ("something".equals(x))\r\n</pre>
 StringLiteralEquality.name = String Literal Equality
 
 SuperClone.desc = Checks that an overriding <code>clone()</code> method invokes <code>super.clone()</code>.<br/>\r\nReference: <a href="http://java.sun.com/j2se/1.4.1/docs/api/java/lang/Object.html#clone%28%29" target="_blank">Object.clone()</a>.
@@ -177,7 +177,7 @@ UnnecessaryParentheses.name = Unnecessary Parentheses
 UnnecessaryParentheses.tokens = tokens to check
 
 OneStatementPerLine.name = One Statement Per Line
-OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statments on a single line.</code>
+OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statements on a single line.</code>
 
 VariableDeclarationUsageDistance.name = Variable Declaration Usage Distance
 VariableDeclarationUsageDistance.desc = Checks the distance between declaration of variable and its first usage.
