--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -1,9 +1,9 @@
 
-EmptyForInitializerPad.desc   = Checks the padding of an empty for initializer; that is whether white space is required at an empty for initializer, or such white space is forbidden. No check occurs if there is a line wrap at the initializer, as in\r\n<pre>\r\nfor (\r\n      ; i < j; i++, j--)\r\n</pre>\r\n\u0009
+EmptyForInitializerPad.desc   = Checks the padding of an empty for initializer; that is whether white space is required at an empty for initializer, or such white space is forbidden. No check occurs if there is a line wrap at the initializer, as in\r\n<pre>\r\nfor (\r\n      ; i < j; i++, j--)\r\n</pre>
 EmptyForInitializerPad.name   = Empty For Initializer Pad
 EmptyForInitializerPad.option = Policy on how to pad an empty for iterator.
 
-EmptyForIteratorPad.desc   = Checks the padding of an empty for iterator; that is whether white space is required at an empty for iterator, or such white space is forbidden. No check occurs if there is a line wrap at the iterator, as in\r\n<pre>\r\nfor (Iterator foo = very.long.line.iterator();\r\n      foo.hasNext();\r\n     )\r\n</pre>\r\n\u0009\r\n\u0009\u0009
+EmptyForIteratorPad.desc   = Checks the padding of an empty for iterator; that is whether white space is required at an empty for iterator, or such white space is forbidden. No check occurs if there is a line wrap at the iterator, as in\r\n<pre>\r\nfor (Iterator foo = very.long.line.iterator();\r\n      foo.hasNext();\r\n     )\r\n</pre>
 EmptyForIteratorPad.name   = Empty For Iterator Pad
 EmptyForIteratorPad.option = Policy on how to pad an empty for iterator.
 
