--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/blocks/checkstyle-metadata.properties
@@ -14,7 +14,7 @@ EmptyCatchBlock.desc = Checks for empty catch blocks.
 EmptyCatchBlock.exceptionVariableName = The name of variable associated with exception
 EmptyCatchBlock.commentFormat = The format of the first comment inside empty catch
 
-LeftCurly.desc          = Checks for the placement of left curly braces (<code>'{'</code>) for code blocks.<br/>\r\nThe policy to verify is specified using property <code>option</code>.<br/>\r\nPolicies <scode>eol</code> and <code> nlow</code> take into account property <code>maxLineLength</code>.
+LeftCurly.desc          = Checks for the placement of left curly braces (<code>'{'</code>) for code blocks.<br/>\r\nThe policy to verify is specified using property <code>option</code>.<br/>\r\nPolicies <code>eol</code> and <code>nlow</code> take into account property <code>maxLineLength</code>.
 LeftCurly.name          = Left Curly Brace Placement
 LeftCurly.option        = policy on placement of a left curly brace ('{')
 LeftCurly.ignoreEnums   = If true, Check will ignore enums when left curly brace policy is EOL
@@ -26,7 +26,7 @@ NeedBraces.tokens = blocks to check
 NeedBraces.allowSingleLineStatement = allows single-line statements without braces
 NeedBraces.allowEmptyLoopBody = allows loops with empty bodies
 
-RightCurly.desc             = Checks the placement of right curly braces (<code>'}'</code>) for <code> else</code>, <code>try</code>, and <code>catch</code> tokens.<br/>\r\nThe policy to verify is specified using property <code>option</code>.
+RightCurly.desc             = Checks the placement of right curly braces (<code>'}'</code>) for <code>else</code>, <code>try</code>, and <code>catch</code> tokens.<br/>\r\nThe policy to verify is specified using property <code>option</code>.
 RightCurly.name             = Right Curly Brace Placement
-RightCurly.option           = policy on placement of a right curly brace ('}')  \u0009
+RightCurly.option           = policy on placement of a right curly brace ('}')
 RightCurly.tokens           = blocks to check
