--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checkstyle-metadata.properties
@@ -9,8 +9,8 @@ Checker.localeLanguage = locale language for messages
 Checker.charset        = name of the file charset (Note: eclipse-cs plugin sets this property to the projects default charset)
 Checker.fileExtensions = file extensions that are accepted (comma separated)
 Checker.haltOnException = Controls whether exceptions should halt execution or not.
+Checker.tabWidth       = number of expanded spaces for a tab character ('\t'); used in messages and Checks that print violations on files with tabs
 
 TreeWalker.name           = TreeWalker
 TreeWalker.desc           = FileSetCheck TreeWalker checks individual Java source files and defines properties that are applicable to checking such files.
-TreeWalker.tabWidth       = number of expanded spaces for a tab character ('\t'); used in messages and Checks that require a tab width, such as LineLength
 TreeWalker.fileExtensions = file type extension to identify java files. Setting this property is typically only required if your java source code is preprocessed before compilation and the original files do not have the extension .java
