Update to Checkstyle 8.24

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -65,3 +65,8 @@ UniqueProperties.fileExtensions = file type extension of the files to check.
 SuppressWarningsHolder.name = SuppressWarningsHolder
 SuppressWarningsHolder.desc = Maintains a set of check suppressions from {@link SuppressWarnings} annotations.
 SuppressWarningsHolder.aliasList = the list of comma-separated alias assignments
+
+OrderedProperties.name = Ordered Properties
+OrderedProperties.desc = Detects if keys in properties files are in correct order.
+OrderedProperties.fileExtensions = Specify file type extension of the files to check.
+
