--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -97,6 +97,7 @@ MagicNumber.name          = Magic Number
 MagicNumber.tokens        = Tokens to check.
 MagicNumber.ignoreHashCodeMethod = Ignore magic numbers in hashCode methods.
 MagicNumber.ignoreAnnotation = Ignore magic numbers in annotation declarations.
+MagicNumber.ignoreAnnotationElementDefaults = Ignore magic numbers in annotation elements defaults.
 MagicNumber.ignoreFieldDeclaration = Ignore magic numbers in field declarations.
 MagicNumber.constantWaiverParentToken = Token that are allowed in the AST path from the number literal to the enclosing constant definition.
 
@@ -172,12 +173,24 @@ SuperClone.name = SuperClone
 SuperFinalize.desc = Checks that an overriding <code>finalize()</code> method invokes <code>super.finalize()</code>.<br/>\r\nReference: <a href="http://java.sun.com/docs/books/tutorial/java/data/garbagecollection.html" target="_blank">Cleaning Up Unused Objects</a>.
 SuperFinalize.name = SuperFinalize
 
+UnnecessarySemicolonAfterTypeMemberDeclaration.desc = Checks if unnecessary semicolon is used after type member declaration.
+UnnecessarySemicolonAfterTypeMemberDeclaration.name = Unnecessary semicolon after type member declaration
+UnnecessarySemicolonAfterTypeMemberDeclaration.tokens = tokens to check
+
+UnnecessarySemicolonInEnumeration.desc = Checks if unnecessary semicolon is in enum definitions.
+UnnecessarySemicolonInEnumeration.name = Unnecessary semicolon in enumeration
+
+UnnecessarySemicolonInTryWithResources.desc = Checks for the use of unnecessary semicolon in try with resource.
+UnnecessarySemicolonInTryWithResources.name = Unnecessary semicolon in try with resource
+UnnecessarySemicolonInTryWithResources.allowWhenNoBraceAfterSemicolon = Allow unnecessary semicolon if closing paren is not on the same line.
+
 UnnecessaryParentheses.desc = Checks for the use of unnecessary parentheses.
 UnnecessaryParentheses.name = Unnecessary Parentheses
 UnnecessaryParentheses.tokens = tokens to check
 
 OneStatementPerLine.name = One Statement Per Line
 OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statements on a single line.</code>
+OneStatementPerLine.treatTryResourcesAsStatement = Enable resources processing.
 
 VariableDeclarationUsageDistance.name = Variable Declaration Usage Distance
 VariableDeclarationUsageDistance.desc = Checks the distance between declaration of variable and its first usage.
