--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/sizes/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/sizes/checkstyle-metadata.properties
@@ -13,10 +13,11 @@ FileLength.max  = Maximum number of lines allowed.
 FileLength.name = Maximum File Length
 FileLength.fileExtensions = file type extension of files to process
 
-LineLength.desc          = Checks for long lines.<br/>\r\nRationale: Long lines are hard to read in printouts or if developers have limited screen space for the source code, e.g. if the IDE displays additional information like project tree, class hierarchy, etc.
-LineLength.ignorePattern = Pattern for lines to ignore.
-LineLength.max           = Maximum allowed line length.
-LineLength.name          = Maximum Line Length
+LineLength.desc           = Checks for long lines.<br/>\r\nRationale: Long lines are hard to read in printouts or if developers have limited screen space for the source code, e.g. if the IDE displays additional information like project tree, class hierarchy, etc.
+LineLength.fileExtensions = file extensions that are accepted
+LineLength.ignorePattern  = Pattern for lines to ignore.
+LineLength.max            = Maximum allowed line length.
+LineLength.name           = Maximum Line Length
 
 MethodLength.countEmpty = whether to count empty lines and single line comments of the form //
 MethodLength.desc       = Checks for long methods and constructors.<br/>\r\nRationale: If a method becomes very long it is hard to understand. Therefore long methods should usually be refactored into several individual methods that focus on a specific task.
