Update to Checkstyle 8.25
also fixed some deprecation warnings

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/regexp/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/regexp/checkstyle-metadata.properties
@@ -8,6 +8,7 @@ RegexpMultiline.maximum    = The maximum number of matches required in each file
 RegexpMultiline.message    = message which is used to notify about violations, if empty then default(hard-coded) message is used.
 RegexpMultiline.minimum    = The minimum number of matches required in each file.
 RegexpMultiline.name       = RegexpMultiline
+RegexpMultiline.matchAcrossLines = Controls whether to match expressions across multiple lines.
 RegexpMultiline.fileExtensions = file type extension of files to process
 
 RegexpSingleline.desc               = A check for detecting single lines that match a supplied regular expression. Works with any file type.\r\n<br/><br/>\r\nRationale: This check can be used to prototype checks and to find common bad practice such as calling ex.printStacktrace(), System.out.println(), System.exit(), etc.
