Issue #163: update to Checkstyle 8.22

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -26,6 +26,10 @@ NewlineAtEndOfFile.fileExtensions = file type extension of the files to check.
 NewlineAtEndOfFile.lineSeparator  = type of line separator
 NewlineAtEndOfFile.name           = New Line At End Of File
 
+OrderedProperties.name = Ordered Properties
+OrderedProperties.desc = Detects if keys in properties files are in correct order.
+OrderedProperties.fileExtensions = Specify file type extension of the files to check.
+
 TodoComment.desc   = A check for TODO: comments. Actually it is a generic regular expression matcher on Java comments. To check for other patterns in Java comments, set property format.
 TodoComment.format = Regular expression definging pattern to look for.
 TodoComment.name   = Todo Comment
