--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -176,6 +176,13 @@ UnnecessaryParentheses.desc = Checks for the use of unnecessary parentheses.
 UnnecessaryParentheses.name = Unnecessary Parentheses
 UnnecessaryParentheses.tokens = tokens to check
 
+UnnecessarySemicolonInEnumeration.desc = Checks if unnecessary semicolon is in enum definitions.
+UnnecessarySemicolonInEnumeration.name = Unnecessary semicolon in enumeration
+
+UnnecessarySemicolonInTryWithResources.desc = Checks for the use of unnecessary semicolon in try with resource.
+UnnecessarySemicolonInTryWithResources.name = Unnecessary semicolon in try with resource
+UnnecessarySemicolonInTryWithResources.allowWhenNoBraceAfterSemicolon = Allow unnecessary semicolon if closing paren is not on the same line.
+
 OneStatementPerLine.name = One Statement Per Line
 OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statements on a single line.</code>
 
