Issue #164: update to Checkstyle 8.23

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -97,6 +97,7 @@ MagicNumber.name          = Magic Number
 MagicNumber.tokens        = Tokens to check.
 MagicNumber.ignoreHashCodeMethod = Ignore magic numbers in hashCode methods.
 MagicNumber.ignoreAnnotation = Ignore magic numbers in annotation declarations.
+MagicNumber.ignoreAnnotationElementDefaults = Ignore magic numbers in annotation elements defaults.
 MagicNumber.ignoreFieldDeclaration = Ignore magic numbers in field declarations.
 MagicNumber.constantWaiverParentToken = Token that are allowed in the AST path from the number literal to the enclosing constant definition.
 
@@ -185,6 +186,7 @@ UnnecessarySemicolonInTryWithResources.allowWhenNoBraceAfterSemicolon = Allow un
 
 OneStatementPerLine.name = One Statement Per Line
 OneStatementPerLine.desc = Checks there is only one statement per line. The following line will be flagged as an error:<br/><code>x = 1; y = 2; // Two statements on a single line.</code>
+OneStatementPerLine.treatTryResourcesAsStatement = Enable resources processing.
 
 VariableDeclarationUsageDistance.name = Variable Declaration Usage Distance
 VariableDeclarationUsageDistance.desc = Checks the distance between declaration of variable and its first usage.
