--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
@@ -39,6 +39,15 @@ SuppressWithPlainTextCommentFilter.onCommentFormat  = comment pattern to trigger
 SuppressWithPlainTextCommentFilter.checkFormat      = check pattern to suppress.
 SuppressWithPlainTextCommentFilter.messageFormat    = message pattern to suppress.
 
+SuppressionSingleFilter.name = Suppression Single Filter
+SuppressionSingleFilter.desc = Filter <code>SuppressionSingleFilter</code> suppresses audit events for Checks violations in the specified file, class, checks, message, module id, lines, and columns.
+SuppressionSingleFilter.files = Define the RegExp for matching against the file name associated with an audit event.
+SuppressionSingleFilter.checks = Define the RegExp for matching against the name of the check associated with an audit event.
+SuppressionSingleFilter.message = Define the RegExp for matching against the message of the check associated with an audit event.
+SuppressionSingleFilter.id = Specify a string matched against the ID of the check associated with an audit event.
+SuppressionSingleFilter.lines = Specify a comma-separated list of values, where each value is an integer or a range of integers denoted by integer-integer.
+SuppressionSingleFilter.columns = Specify a comma-separated list of values, where each value is an integer or a range of integers denoted by integer-integer.
+
 SuppressionXpathFilter.name = Suppression Xpath Filter
 SuppressionXpathFilter.desc = Filter SuppressionXpathFilter works as SuppressionFilter. Additionally, filter processes suppress-xpath elements, which contains xpath-expressions. Xpath-expressions are queries for suppressed nodes inside the AST tree.
 SuppressionXpathFilter.file = the location of the suppressions XML document file. The order the location is checked is:<ol><li>as a filesystem location</li><li>if no file found, and the location starts with either http:// or https://, then it is interpreted as a URL</li><li>if no file found, then passed to the ClassLoader.getResource() method.</li></ol>
