Issue #166: update to Checkstyle 8.24

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -177,6 +177,10 @@ UnnecessaryParentheses.desc = Checks for the use of unnecessary parentheses.
 UnnecessaryParentheses.name = Unnecessary Parentheses
 UnnecessaryParentheses.tokens = tokens to check
 
+UnnecessarySemicolonAfterTypeMemberDeclaration.desc = Checks if unnecessary semicolon is used after type member declaration.
+UnnecessarySemicolonAfterTypeMemberDeclaration.name = Unnecessary semicolon after type member declaration
+UnnecessarySemicolonAfterTypeMemberDeclaration.tokens = tokens to check
+
 UnnecessarySemicolonInEnumeration.desc = Checks if unnecessary semicolon is in enum definitions.
 UnnecessarySemicolonInEnumeration.name = Unnecessary semicolon in enumeration
 
