--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/filters/checkstyle-metadata.properties
@@ -11,6 +11,7 @@ SuppressWithNearbyCommentFilter.checkCPP        = whether to check C++ style com
 SuppressWithNearbyCommentFilter.checkFormat     = check pattern to suppress.
 SuppressWithNearbyCommentFilter.commentFormat   = comment pattern to trigger filter to begin suppression.
 SuppressWithNearbyCommentFilter.desc            = Filter <code>SuppressWithNearbyCommentFilter</code> uses individual comments to suppress audit events.<br/>\r\n<br/><br/>\r\nRationale: Same as SuppressionCommentFilter. Whereas the SuppressionCommentFilter uses matched pairs of filters to turn on/off comment matching, SuppressWithNearbyCommentFilter uses single comments. This requires fewer lines to mark a region, and may be aesthetically preferable in some contexts.\r\n<br/><br/>\r\nUsage: This filter only works in conjunction with a FileContentsHolder, since that check makes the suppression comments in the .java files available sub rosa. A configuration that includes this filter must configure FileContentsHolder as a child module of TreeWalker. 
+SuppressWithNearbyCommentFilter.idFormat         = Specify check ID pattern to suppress.
 SuppressWithNearbyCommentFilter.influenceFormat = a negative/zero/positive value that defines the number of lines preceding/at/following the suppression comment 
 SuppressWithNearbyCommentFilter.messageFormat   = message pattern to suppress.
 SuppressWithNearbyCommentFilter.name            = Suppress With Nearby Comment Filter
@@ -19,6 +20,7 @@ SuppressionCommentFilter.checkC           = whether to check C style comments (/
 SuppressionCommentFilter.checkCPP         = whether to check C++ style comments (//)
 SuppressionCommentFilter.checkFormat      = check pattern to suppress.
 SuppressionCommentFilter.desc             = Filter <code>SuppressionCommentFilter</code> uses pairs of comments to suppress audit events.<br/>\r\nRationale: Sometimes there are legitimate reasons for violating a check. When this is a matter of the code in question and not personal preference, the best place to override the policy is in the code itself. Semi-structured comments can be associated with the check. This is sometimes superior to a separate suppressions file, which must be kept up-to-date as the source file is edited.
+SuppressionCommentFilter.idFormat         = Specify check ID pattern to suppress.
 SuppressionCommentFilter.messageFormat    = message pattern to suppress.
 SuppressionCommentFilter.name             = Suppression Comment Filter
 SuppressionCommentFilter.offCommentFormat = comment pattern to trigger filter to begin suppression.
@@ -34,6 +36,7 @@ SuppressWarningsFilter.desc = Filter SuppressWarningsFilter uses annotations to 
 
 SuppressWithPlainTextCommentFilter.name             = Suppression With Plain Text Comment Filter
 SuppressWithPlainTextCommentFilter.desc             = Filter <code>SuppressWithPlainTextCommentFilter</code> uses plain text to suppress audit events. The filter can be used only to suppress audit events received from the checks which implement FileSetCheck interface. In other words, the checks which have Checker as a parent module. The filter knows nothing about AST, it treats only plain text comments and extracts the information required for suppression from the plain text comments. Currently the filter supports only single line comments.<br/><br/>Please, be aware of the fact that, it is not recommended to use the filter for Java code anymore, however you still are able to use it to suppress audit events received from the checks which implement FileSetCheck interface.<br/><br/><b>Rationale:</b> Sometimes there are legitimate reasons for violating a check. When this is a matter of the code in question and not personal preference, the best place to override the policy is in the code itself. Semi-structured comments can be associated with the check. This is sometimes superior to a separate suppressions file, which must be kept up-to-date as the source file is edited.<br/><br/>Note that the suppression comment should be put before the violation. You can use more than one suppression comment each on separate line. 
+SuppressWithPlainTextCommentFilter.idFormat         = Specify check ID pattern to suppress.
 SuppressWithPlainTextCommentFilter.offCommentFormat = comment pattern to trigger filter to begin suppression.
 SuppressWithPlainTextCommentFilter.onCommentFormat  = comment pattern to trigger filter to end suppression.
 SuppressWithPlainTextCommentFilter.checkFormat      = check pattern to suppress.
