--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 8.21.0",
+    "template": "partials/releases/8.21.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 8.20.0",
     "template": "partials/releases/8.20.0/release_notes.html",
     "open": true
@@ -16,16 +21,15 @@
   },
   {
     "version": "Release 8.17.0",
-    "template": "partials/releases/8.17.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/8.17.0/release_notes.html"
   },
   {
     "version": "Release 8.16.0",
-    "template": "partials/releases/8.16.0/release_notes.html",
+    "template": "partials/releases/8.16.0/release_notes.html"
   },
   {
     "version": "Release 8.15.0",
-    "template": "partials/releases/8.15.0/release_notes.html",
+    "template": "partials/releases/8.15.0/release_notes.html"
   },
   {
     "version": "Release 8.14.0",
