config: fix path to doc folder to be able to do 'mvn package' in net.sf.eclipsecs.doc

--- a/net.sf.eclipsecs.doc/pom.xml
+++ b/net.sf.eclipsecs.doc/pom.xml
@@ -78,7 +78,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/docs</outputDirectory>
+                            <outputDirectory>${project.basedir}/../docs</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>src/main/resources</directory>
