Issue #210: keep .gitignore on clean phase

--- a/net.sf.eclipsecs.doc/pom.xml
+++ b/net.sf.eclipsecs.doc/pom.xml
@@ -24,6 +24,9 @@
                             <includes>
                                 <include>**/*</include>
                             </includes>
+                            <excludes>
+                                <exclude>.gitignore</exclude>
+                            </excludes>
                         </fileset>
                     </filesets>
                 </configuration>
