--- a/.travis.yml
+++ b/.travis.yml
@@ -18,22 +18,27 @@ addons:
 install:
   - ""
 
+# JDKs used in builds must be supported by Tycho.
+# Check https://wiki.eclipse.org/Tycho/Release_Notes to find supported versions.
 matrix:
   fast_finish: true
   include:
+    # JDK 8 (minimal supported Java version of eclipse-cs)
     - jdk: openjdk8
       env:
         - DESC="install (openjdk8)"
         - CMD="mvn install && git diff"
 
+    # JDK 11 (Long Term Support version)
     - jdk: openjdk11
       env:
         - DESC="install (openjdk11)"
         - CMD="mvn install && git diff"
 
-    - jdk: openjdk12
+    # JDK 13 (most recent Java version)
+    - jdk: openjdk13
       env:
-        - DESC="install (openjdk12)"
+        - DESC="install (openjdk13)"
         - CMD="mvn install && git diff"
 
 script:
