Issue #221: update to Checkstyle 8.31

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -188,6 +188,10 @@ UnnecessaryParentheses.desc = Checks for the use of unnecessary parentheses.
 UnnecessaryParentheses.name = Unnecessary Parentheses
 UnnecessaryParentheses.tokens = tokens to check
 
+UnnecessarySemicolonAfterOuterTypeDeclaration.desc = Checks if unnecessary semicolon is used after type declaration.
+UnnecessarySemicolonAfterOuterTypeDeclaration.name = Unnecessary semicolon after outer type declaration
+UnnecessarySemicolonAfterOuterTypeDeclaration.tokens = tokens to check
+
 UnnecessarySemicolonAfterTypeMemberDeclaration.desc = Checks if unnecessary semicolon is used after type member declaration.
 UnnecessarySemicolonAfterTypeMemberDeclaration.name = Unnecessary semicolon after type member declaration
 UnnecessarySemicolonAfterTypeMemberDeclaration.tokens = tokens to check
