Issue #224: update to Checkstyle 8.32

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -86,6 +86,7 @@ AbbreviationAsWordInName.allowedAbbreviationLength = indicates on the allowed am
 AbbreviationAsWordInName.allowedAbbreviations = list of abbreviations that must be skipped for checking. Abbreviations should be separated by comma, no spaces are allowed.
 AbbreviationAsWordInName.ignoreFinal = allow to skip variables with final modifier.
 AbbreviationAsWordInName.ignoreStatic = allow to skip variables with static modifier.
+AbbreviationAsWordInName.ignoreStaticFinal = Allow to skip variables with both static and final modifiers.
 AbbreviationAsWordInName.ignoreOverriddenMethods = Allows to ignore methods tagged with @Override annotation (that usually mean inherited name).
 AbbreviationAsWordInName.tokens = Tokens to check.
 
