--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -38,4 +38,4 @@ VisibilityModifier.immutableClassCanonicalNames = immutable classes canonical na
 VisibilityModifier.ignoreAnnotationCanonicalNames = ignore annotations canonical names
 
 OneTopLevelClass.name = One Top Level Class
-OneTopLevelClass.desc = Checks that each top-level class, interface or enum resides in a source file of its own. Official description of a 'top-level' term:7.6. Top Level Type Declarations. If file doesn't contains public class, enum or interface, top-level type is the first type in file.
+OneTopLevelClass.desc = Checks that each top-level class, interface, enum or annotation resides in a source file of its own. Official description of a 'top-level' term: 7.6. Top Level Type Declarations. If file doesn't contains public class, interface, enum or annotation, top-level type is the first type in file.
