--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 8.32.0",
+    "template": "partials/releases/8.32.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 8.31.0",
     "template": "partials/releases/8.31.0/release_notes.html",
     "open": true
