--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 
     <properties>
         <tycho-version>1.6.0</tycho-version>
-        <tycho-extras-version>1.6.0</tycho-extras-version>
         <tycho.scmUrl>scm:git:git://github.com:checkstyle/eclipse-cs.git</tycho.scmUrl>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -48,7 +47,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -124,12 +123,12 @@
                         <dependency>
                             <groupId>org.eclipse.tycho.extras</groupId>
                             <artifactId>tycho-buildtimestamp-jgit</artifactId>
-                            <version>${tycho-extras-version}</version>
+                            <version>${tycho-version}</version>
                         </dependency>
                         <dependency>
                             <groupId>org.eclipse.tycho.extras</groupId>
                             <artifactId>tycho-sourceref-jgit</artifactId>
-                            <version>${tycho-extras-version}</version>
+                            <version>${tycho-version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -188,7 +187,7 @@
                 <plugin>
                     <groupId>org.eclipse.tycho.extras</groupId>
                     <artifactId>tycho-source-feature-plugin</artifactId>
-                    <version>${tycho-extras-version}</version>
+                    <version>${tycho-version}</version>
                 </plugin>
                 <plugin>
                     <groupId>com.carrotgarden.maven</groupId>
@@ -251,7 +250,7 @@
                             <configuration>
                                 <rules>
                                     <requireMavenVersion>
-                                        <version>3.6.2</version>
+                                        <version>3.6.3</version>
                                     </requireMavenVersion>
                                     <requireReleaseDeps/>
                                 </rules>
