Issue #232: update to Checkstyle 8.33

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/checkstyle-metadata.properties
@@ -69,3 +69,6 @@ UniqueProperties.fileExtensions = file type extension of the files to check.
 SuppressWarningsHolder.name = SuppressWarningsHolder
 SuppressWarningsHolder.desc = Maintains a set of check suppressions from {@link SuppressWarnings} annotations.
 SuppressWarningsHolder.aliasList = the list of comma-separated alias assignments
+
+NoCodeInFile.name = No Code In File
+NoCodeInFile.desc = Checks whether file contains code.<br/><br/>Files which are considered to have no code: <ul><li>Files with no text</li><li>Files with only single line or multi-line comment(s)</li></ul>
