--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -1,5 +1,6 @@
 ArrayTrailingComma.desc = Checks that array initialization contains a trailing comma.\r\n<pre>\r\nint[] a = new int[]\r\n{\r\n    1,\r\n    2,\r\n    3,\r\n};\r\n</pre>\r\nThe check allows to not add a comma if both left and right curlys are on the same line.\r\n<pre>\r\nreturn new int[] { 0 };\r\n</pre>\r\nRationale: Putting this comma in makes it easier to change the order of the elements or add new elements on the end.
 ArrayTrailingComma.name = Trailing Array Comma
+ArrayTrailingComma.alwaysDemandTrailingComma = Control whether to always check for a trailing comma, even when an array is inline.
 
 AvoidDoubleBraceInitialization.desc = Detects double brace initialization.
 AvoidDoubleBraceInitialization.name = Avoid Double Brace Initialization
