--- a/net.sf.eclipsecs.checkstyle/pom.xml
+++ b/net.sf.eclipsecs.checkstyle/pom.xml
@@ -9,8 +9,30 @@
     <artifactId>net.sf.eclipsecs.checkstyle</artifactId>
     <packaging>eclipse-plugin</packaging>
     <name>Checkstyle Core Library Plugin</name>
+    
+    <properties>
+        <checkstyle.version>8.33</checkstyle.version>
+    </properties>
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>download-checkstyle-src</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>.</outputDirectory>
+                            <url>https://github.com/checkstyle/checkstyle/archive/checkstyle-${checkstyle.version}.zip</url>
+                            <outputFileName>checkstyle-checkstyle-${checkstyle.version}.zip</outputFileName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>        
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
