--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -7,6 +7,10 @@ bin.includes = .,\
                plugin.xml,\
                schema/,\
                core.properties,\
-               lib/dom4j-2.1.3.jar
+               lib/dom4j-2.1.3.jar, \
+               lib/reflections-0.9.10.jar, \
+               lib/snakeyaml-1.26.jar, \
+               lib/metadata-gen-1.0-SNAPSHOT.jar
+               
 source.. = src/
 
