--- a/net.sf.eclipsecs.ui/.classpath
+++ b/net.sf.eclipsecs.ui/.classpath
@@ -12,6 +12,12 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+    <accessrules>
+        <accessrule kind="accessible" pattern="org/eclipse/**"/>
+        <accessrule kind="accessible" pattern="com/google/**"/>
+        <accessrule kind="accessible" pattern="org/osgi/**"/>
+        <accessrule kind="accessible" pattern="com/puppycrawl/**"/>
+    </accessrules>
 	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.19.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.19-swt.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.23.jar"/>
