Issue #243: update to Checkstyle 8.35

--- a/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/config/token.properties
+++ b/net.sf.eclipsecs.ui/src/net/sf/eclipsecs/ui/config/token.properties
@@ -163,7 +163,7 @@ RESOURCE_SPECIFICATION = Java 7 try-with-resources
 RESOURCES = Resources in a try-with-resources construct
 RESOURCE = A single resource in a try-with-resources construct
 LAMBDA = Java 8 Lambda symbol
-
+PATTERN_VARIABLE_DEF = Pattern variable definition
 
 
 
