--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ matrix:
 
 script:
   - |
+    set -e
     MVN_SETTINGS=${TRAVIS_HOME}/.m2/settings.xml
     if [[ -f ${MVN_SETTINGS} ]]; then
       if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
