--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 */target/
 metadata-gen/
 net.sf.eclipsecs.core/lib/metadata-gen-1.0-SNAPSHOT.jar
+
+# IDEA project files
+checkstyle.iml
+checkstyle.ipr
+checkstyle.iws
+.idea
