--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                .,\
                license/,\
-               checkstyle-8.35-all.jar
+               checkstyle-8.35-all.jar,\
+               checkstyle-8.36-SNAPSHOT-tests.jar
 jars.compile.order = .
 source.. = metadata/
