--- a/net.sf.eclipsecs.checkstyle/pom.xml
+++ b/net.sf.eclipsecs.checkstyle/pom.xml
@@ -11,7 +11,7 @@
     <name>Checkstyle Core Library Plugin</name>
     
     <properties>
-        <checkstyle.version>8.35</checkstyle.version>
+        <checkstyle.version>8.36-SNAPSHOT</checkstyle.version>
     </properties>
     <build>
         <plugins>
