--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ net.sf.eclipsecs.core/lib/metadata-gen-1.0-SNAPSHOT.jar
 *.iml
 *.prefs
 .checkstyle
-net.sf.eclipsecs.core/lib/patch-filter-1.0-SNAPSHOT.jar
 target/
-patch-filters/
+show.patch
